Accessibilité WIp Contraste couleur Fix Liens RS
Footer done

--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ a:hover {
 }
 
 .d-bloc {
-    color: rgba(255, 255, 255, .7);
+    color: #BDBDBD;
 }
 
 .d-bloc button:hover {
@@ -647,11 +647,16 @@ h5,
 h6,
 p,
 label,
-.btn,
-a {
+.btn {
     font-family: "helvetica";
     font-weight: 400;
     color: #575757!important;
+}
+
+a {
+    font-family: "helvetica";
+    font-weight: 400;
+    color: white;
 }
 
 .container {
@@ -727,7 +732,8 @@ h1 {
 }
 
 h4 {
-    color: #333333!important;
+    font-size: 1.3em;
+    color: #EABA4D!important;
 }
 
 .icons {
@@ -780,15 +786,15 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #303030;
 }
 
 .tc-white {
-    color: #212121!important;
+    color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #9D333B;
     color: #FFFFFF!important;
 }
 
